--- a/scss/style.scss
+++ b/scss/style.scss
@@ -328,6 +328,7 @@ header {
 }
 
 .inspiration-frame {
+    padding-bottom: 57px;
     .inspiration-carousel {
         .owl-nav {
             .owl-prev,
@@ -368,6 +369,7 @@ header {
 }
 
 footer {
+    padding-bottom: 55px;
     .container {
         display: flex;
         align-items: flex-start;
@@ -380,22 +382,65 @@ footer {
             font: 14px 'Bold';
             color: #303030;
             text-transform: uppercase;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
+            letter-spacing: 0.6px;
+        }
+        h4 {
+            font: 12px 'Regular';
+            color: #303030;
+            letter-spacing: .7px;
+            word-spacing: -0.5px;
+            max-width: 220px;
+            line-height: 1.9;
+            margin-bottom: 19px;
+        }
+        .social-links {
+            display: flex;
+            align-items: flex-start;
+            a {
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                width: 32px;
+                height: 32px;
+                background: transparent;
+                border: 1px solid #606060;
+                margin-right: 14px;
+                svg {
+                    path {
+                        width: 16px;
+                        height: 16px;
+                        transition: all .2s linear 0s;
+                    }
+                }
+                &:last-child {
+                    margin: 0;
+                }
+                &:hover {
+                    background: #606060;
+                    svg {
+                        path {
+                            fill: #fff;
+                        }
+                    }
+                }
+            }
         }
         li {
             display: block;
-            margin-bottom: 10px;
+            margin-bottom: 4px;
             a {
                 position: relative;
                 font: 12px 'Regular';
                 color: #303030;
                 text-transform: capitalize;
+                letter-spacing: 0.5px;
                 &:before {
                     content: '';
                     position: absolute;
                     left: 0;
                     right: 0;
-                    bottom: 0;
+                    bottom: 1px;
                     height: 1px;
                     background: transparent;
                     transition: all .2s linear 0s;
@@ -408,6 +453,11 @@ footer {
             }
             &:last-child {
                 margin: 0;
+            }
+        }
+        &:nth-child(4) {
+            h3 {
+                margin-bottom: 11px;
             }
         }
     }
