--- a/scss/style.scss
+++ b/scss/style.scss
@@ -177,7 +177,11 @@ header {
             }
         }
     }
+
     @media (max-width: 480px) {
+        .wrapper {
+            height: 100px;
+        }
         .logo-main {
             display: none;
         }
@@ -196,6 +200,10 @@ header {
                 display: none;
             }
             .basket {
+                margin-right: 41.5px;
+                span {
+                    display: none;
+                }
                 svg {
                     &:nth-child(1) {
                         display: none;
@@ -248,6 +256,36 @@ header {
         &:hover {
             background: #959595;
             color: #fff;
+        }
+    }
+
+    @media (max-width: 480px) {
+        height: inherit;
+        .container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        .general-carousel {
+            position: relative;
+            top: inherit;
+            left: inherit;
+            transform: inherit;
+        }
+        h1 {
+            font-size: 70px;
+            line-height: 1.15;
+            margin-bottom: 40px;
+        }
+        h2 {
+            line-height: 1.5;
+            letter-spacing: 1.2px;
+            max-width: 410px;
+            margin: 0 auto;
+        }
+        a {
+            display: none;
         }
     }
 }
@@ -366,6 +404,52 @@ header {
             text-transform: uppercase;
         }
     }
+
+    @media (max-width: 480px) {
+        padding-bottom: 70px;
+        .container {
+            max-height: inherit;
+            align-items: inherit;
+        }
+        a {
+            width: 100%;
+            .underheader {
+                font: 22px 'Italic-g';
+                letter-spacing: 1px;
+            }
+            &:nth-child(1) {
+                order: 1;
+            }
+            &:nth-child(9) {
+                order: 2;
+            }
+            &:nth-child(4) {
+                order: 3;
+            }
+            &:nth-child(8) {
+                order: 4;
+            }
+            &:nth-child(9) {
+                order: 2;
+            }
+        }
+        .arrow {
+            height: 200px;
+            img {
+                margin: 0 auto 19px;
+                transform: rotate(90deg);
+            }
+        }
+        .price {
+            height: 290px;
+        }
+        .empty {
+            background: #767676;
+        }
+        .big, .bird {
+            display: none;
+        }
+    }
 }
 
 .signup-frame {
@@ -412,6 +496,33 @@ header {
             opacity: .7;
         }
     }
+
+    @media (max-width: 480px) {
+        padding-bottom: 80px;
+        h2 {
+            line-height: 1.2;
+            margin-bottom: 23px;
+        }
+        h3 {
+            margin-bottom: 57px;
+        }
+        form {
+            display: flex;
+            input {
+                font: 20px 'Italic';
+                line-height: 58px;
+                flex-grow: 2;
+                padding: 0 18px;
+            }
+            button {
+                width: auto;
+                line-height: 58px;
+                font: 20px 'Regular';
+                flex-basis: 35.6%;
+                margin-left: -1px;
+            }
+        }
+    }
 }
 
 .inspiration-frame {
@@ -452,6 +563,18 @@ header {
     .item {
         background: #bbb;
         height: 118px;
+    }
+
+    @media (max-width: 480px) {
+        padding-bottom: 141px;
+        .inspiration-carousel {
+            .owl-nav {
+                display: none;
+            }
+        }
+        .item {
+            height: 240px;
+        }
     }
 }
 
@@ -545,6 +668,45 @@ footer {
         &:nth-child(4) {
             h3 {
                 margin-bottom: 11px;
+            }
+        }
+    }
+
+    @media (max-width: 480px) {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            left: 15px;
+            right: 15px;
+            height: 1px;
+            top: -62px;
+            background: #e5e5e5;
+        }
+        .item {
+            text-align: center;
+            width: 100%;
+            &:nth-child(-n+3) {
+                display: none;
+            }
+            &:nth-child(4) {
+                h3 {
+                    margin-bottom: 33px;
+                    letter-spacing: 1.6px;
+                }
+            }
+            h3 {
+                font: 30px 'Bold';
+            }
+            h4 {
+                font: 18px 'Regular';
+                margin: 0 auto 56px;
+                max-width: 340px;
+                letter-spacing: 1px;
+                line-height: 1.7;
+            }
+            .social-links {
+                justify-content: center;
             }
         }
     }
