--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,11 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 10px;
+
+    @media (max-width: 480px) {
+        max-width: 480px;
+        padding: 0 20px;
+    }
 }
 
 h1,
@@ -33,12 +38,26 @@ header {
         justify-content: flex-start;
         height: 115px;
         border-bottom: 1px solid #e5e5e5;
+        position: relative;
+        &:before {
+            display: none;
+            content: '';
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 10px;
+            background: #fff;
+            z-index: 3;
+        }
     }
     .logo-main {
         display: block;
         margin-right: 57px;
     }
     .logo-mobile {
+        position: relative;
+        z-index: 4;
         display: none;
     }
     ul {
@@ -65,6 +84,8 @@ header {
         align-items: center;
         justify-content: flex-end;
         flex-grow: 2;
+        position: relative;
+        z-index: 4;
         a {
             font: 14px 'Regular';
             text-transform: capitalize;
@@ -133,6 +154,7 @@ header {
         width: 60px;
         height: 60px;
         position: relative;
+        z-index: 4;
         background: #8d8d8d;
         cursor: pointer;
         transition: all .2s linear 0s;
@@ -177,10 +199,16 @@ header {
             }
         }
     }
+     nav.active {
+         top: 70px;
+     }
 
     @media (max-width: 480px) {
         .wrapper {
-            height: 100px;
+            height: 80px;
+            &:before {
+                display: block;
+            }
         }
         .logo-main {
             display: none;
@@ -189,7 +217,32 @@ header {
             display: block;
         }
         nav {
-            display: none;
+            background: #8d8d8d;
+            position: absolute;
+            z-index: 2;
+            top: -400px;
+            right: 0;
+            left: 0;
+            text-align: left;
+            transition: all .3s linear 0s;
+        }
+        ul {
+            flex-wrap: wrap;
+            padding: 0 28px;
+            li {
+                line-height: 79px;
+                margin: 0;
+                width: 100%;
+                border-bottom: 1px solid #747474;
+                a {
+                    font-size: 24px;
+                    color: #fff;
+                    letter-spacing: 1px;
+                }
+                &:last-child {
+                    border-bottom-color: transparent;
+                }
+            }
         }
         .mobile-button {
             display: block;
